--- a/Playback.html
+++ b/Playback.html
@@ -2,7 +2,7 @@
 	<head>
 		<script src="http://js.leapmotion.com/leap-0.6.3.min.js"></script>
 		<script src="leapDrawCircle.js"></script>
-		<script src="Record.js"></script>
+		<script src="Playback.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
 		<script src="prepareToDraw.js"></script>
 	</head>
